--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Bootstrap 4, from LayoutIt!</title>
+    <title>EMPRESA DE TRANSPORTE TROME EXPRESS CARGO</title>
 
     <meta name="description" content="Source code generated using layoutit.com">
     <meta name="author" content="LayoutIt!">
@@ -39,15 +39,15 @@
 				</li>
 			</ul>
 			<h3><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-				h3. Lorem ipsum dolor sit amet.
+				Empresa de Transportes Trome Express Cargo E.I.R.L
 			</font></font></h3>
 			<div class="row">
 				<div class="col-md-6">
 					<h2><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-						título
+						Descripcion de la empresa
 					</font></font></h2>
 					<p><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-						Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+						Trome Express Cargo es una Empresa Individual de Responsabilidad Limitada con el RUC 20527866732, con sede en Wanchaq, Cusco, Perú. Fundada el 1 de mayo de 2007, se dedica al transporte de carga por carretera, con 5 empleados y operaciones de facturación y contabilidad manuales. Su dirección legal está en Av. República de Argentina, Mza. H Lote. 17b, y está registrada como empresa activa. Destaca por estar empadronada en el Registro Nacional de Proveedores, lo que le permite contratar con el Estado Peruano, consolidando así su posición en el mercado regional.
 					</font></font></p>
 					<p>
 						<a class="btn" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Ver detalles "</font></font></a>
