--- a/index.html
+++ b/index.html
@@ -96,32 +96,10 @@
 			 <span class="badge badge-default"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">etiqueta</font></font></span>
 			<dl>
 				<dt><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-					Listas de descripción
+					Misión
 				</font></font></dt>
 				<dd><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-					Una lista de descripciones es perfecta para definir términos.
-				</font></font></dd>
-				<dt><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-					euismod
-				</font></font></dt>
-				<dd><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-					Vestibulum id ligula porta felis euismod semper eget lacinia odio sem nec elit.
-				</font></font></dd>
-				<dd><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-					Donec id elit non mi porta gravida at eget metus.
-				</font></font></dd>
-				<dt><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-					Malesuada porta
-				</font></font></dt>
-				<dd><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-					Etiam porta sem malesuada magna mollis euismod.
-				</font></font></dd>
-				<dt><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-					Felis euismod semper eget lacinia
-				</font></font></dt>
-				<dd><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-					Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
-				</font></font></dd>
+					"Nuestra misión en Transportes Trome Express Cargo E.I.R.L es proporcionar servicios de transporte de carga confiables, eficientes y seguros para satisfacer las necesidades de nuestros clientes. Nos comprometemos a ofrecer soluciones logísticas integrales, utilizando tecnología de vanguardia y personal altamente capacitado para garantizar la entrega oportuna y el cuidado de la mercancía de nuestros clientes. Buscamos ser líderes en el mercado, superando las expectativas de nuestros clientes y contribuyendo al desarrollo económico y social de las comunidades en las que operamos."
 			</dl>
 		</div>
 	</div>
@@ -133,7 +111,7 @@
 						<img class="card-img-top" alt="Miniatura de Bootstrap primero" src="https://www.layoutit.com/img/people-q-c-600-200-1.jpg">
 						<div class="card-block">
 							<h5 class="card-title"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-								Título de la tarjeta
+								Trasporte 
 							</font></font></h5>
 							<p class="card-text"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
 								Cras justo odio, dapibus ac facilisis in, egetas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
