--- a/index.html
+++ b/index.html
@@ -64,32 +64,14 @@
 			 <span class="badge badge-default"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">etiqueta</font></font></span>
 			<dl>
 				<dt><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-					Listas de descripción
+					Visión
 				</font></font></dt>
 				<dd><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-					Una lista de descripciones es perfecta para definir términos.
+					Ser líder en transporte de carga por carretera en Cusco, Perú, enfocándose en la excelencia operativa, fiabilidad en entregas y servicio al cliente. Buscamos expandir nuestras capacidades de manera sostenible y fortalecer alianzas estratégicas, consolidando nuestra reputación como socio confiable en el mercado regional.
 				</font></font></dd>
-				<dt><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-					euismod
-				</font></font></dt>
-				<dd><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-					Vestibulum id ligula porta felis euismod semper eget lacinia odio sem nec elit.
-				</font></font></dd>
-				<dd><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-					Donec id elit non mi porta gravida at eget metus.
-				</font></font></dd>
-				<dt><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-					Malesuada porta
-				</font></font></dt>
-				<dd><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-					Etiam porta sem malesuada magna mollis euismod.
-				</font></font></dd>
-				<dt><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-					Felis euismod semper eget lacinia
-				</font></font></dt>
-				<dd><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-					Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
-				</font></font></dd>
+				
+				
+			
 			</dl>
 		</div>
 		<div class="col-md-6">
