--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
 					</p>
 				</div>
 				<div class="col-md-6">
-					<img alt="Vista previa de imagen de arranque" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg">
+					<img alt="Vista previa de imagen de arranque" src="images/transporte.jpg"
+					width="200">
 				</div>
 			</div>
 		</div>
