--- a/index.html
+++ b/index.html
@@ -231,13 +231,21 @@
 	</div>
 	<div class="row">
 		<div class="col-md-6">
-			 <span class="badge badge-default"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">etiqueta</font></font></span> 
-			<address>
-				 <strong><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Twitter, Inc.</font></font></strong><br><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> 795 Folsom Ave, Suite 600 </font></font><br><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">San Francisco, CA 94107 </font></font><br> <abbr title="Teléfono"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">T:</font></font></abbr><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> (123) 456-7890
+			<div>
+				<address>
+					<strong><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Direccion</font></font></strong><br>
+					<font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Av. República De Argentina Mza. H Lote. 17 B, Cusco 08200</font></font><br>
+					<abbr title="Teléfono"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">T:</font></font></abbr><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">984 102 689</font></font>
+				</address>
+			</div>
+			
 			</font></font></address>
 		</div>
 		<div class="col-md-6">
-			 <span class="badge badge-default"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">etiqueta</font></font></span><img alt="Vista previa de imagen de arranque" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg">
+			<div>
+				<span class="badge badge-default"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Ubica</font></font></span><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3879.049167368708!2d-71.94487912533192!3d-13.532574171341375!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x916e7f2d272349d7%3A0x779887fd61e4e9b3!2sTrome%20Express%20Cargo%20EIRL%20Cusco!5e0!3m2!1ses!2spe!4v1712091906022!5m2!1ses!2spe" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+			</div>
+			
 		</div>
 	</div>
 </div>
