--- a/index.html
+++ b/index.html
@@ -38,24 +38,23 @@
 					</div>
 				</li>
 			</ul>
-			<h3><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-				Empresa de Transportes Trome Express Cargo E.I.R.L
-			</font></font></h3>
+			<h3 style="font-family:century gothic; text-align:center;">
+				<span style="vertical-align: inherit; font-size: 50px;">
+					EMPRESA DE TRANSPORTE TROME EXPRESS CARGO
+				</span>
+			</h3>			
 			<div class="row">
 				<div class="col-md-6">
-					<h2><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-						Descripcion de la empresa
-					</font></font></h2>
-					<p><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-						Trome Express Cargo es una Empresa Individual de Responsabilidad Limitada con el RUC 20527866732, con sede en Wanchaq, Cusco, Perú. Fundada el 1 de mayo de 2007, se dedica al transporte de carga por carretera, con 5 empleados y operaciones de facturación y contabilidad manuales. Su dirección legal está en Av. República de Argentina, Mza. H Lote. 17b, y está registrada como empresa activa. Destaca por estar empadronada en el Registro Nacional de Proveedores, lo que le permite contratar con el Estado Peruano, consolidando así su posición en el mercado regional.
-					</font></font></p>
-					<p>
-						<a class="btn" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Ver detalles "</font></font></a>
+					<h2 style="font-family:century gothic; text-align:center;">
+						<span style="vertical-align: inherit; font-size: 24px;">
+							EMPRESA DE TRANSPORTE TROME EXPRESS CARGO
+						</span>
+					</h2>
+					<p style="font-family:century gothic; text-align:justify;">
+						<span style="vertical-align: inherit;">
+							Trome Express Cargo es una Empresa Individual de Responsabilidad Limitada con el RUC 20527866732, con sede en Wanchaq, Cusco, Perú. Fundada el 1 de mayo de 2007, se dedica al transporte de carga por carretera, con 5 empleados y operaciones de facturación y contabilidad manuales. Su dirección legal está en Av. República de Argentina, Mza. H Lote. 17b, y está registrada como empresa activa. Destaca por estar empadronada en el Registro Nacional de Proveedores, lo que le permite contratar con el Estado Peruano, consolidando así su posición en el mercado regional.
+						</span>
 					</p>
-				</div>
-				<div class="col-md-6">
-					<img alt="Vista previa de imagen de arranque" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg">
-				</div>
 			</div>
 		</div>
 	</div>
