--- a/index.html
+++ b/index.html
@@ -100,39 +100,39 @@
 								Cras justo odio, dapibus ac facilisis in, egetas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
 							</font></font></p>
 							<p>
-								<a class="btn btn-primary" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">acción</font></font></a> <a class="btn" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">acción</font></font></a>
+								<a class="btn btn-primary" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Información</font></font></a> <a class="btn" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"></font></font></a>
 							</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="card">
-						<img class="card-img-top" alt="Miniatura de Bootstrap segunda" src="https://www.layoutit.com/img/city-q-c-600-200-1.jpg">
+						<img class="card-img-top" alt="Miniatura de Bootstrap segunda"  >
 						<div class="card-block">
 							<h5 class="card-title"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-								Título de la tarjeta
+								
 							</font></font></h5>
 							<p class="card-text"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-								Cras justo odio, dapibus ac facilisis in, egetas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+								Ofrecemos el servicio exclusivo de mudanza y transporte de carga completa, garantizando la seguridad y puntualidad en la entrega de tus bienes. 
 							</font></font></p>
 							<p>
-								<a class="btn btn-primary" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">acción</font></font></a> <a class="btn" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">acción</font></font></a>
+								<a class="btn btn-primary" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Información</font></font></a> <a class="btn" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"></font></font></a>
 							</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="card">
-						<img class="card-img-top" alt="Miniatura de Bootstrap tercera" src="https://www.layoutit.com/img/sports-q-c-600-200-1.jpg">
+						<img class="card-img-top" alt="Miniatura de Bootstrap tercera" src="images/emba.jpg" width="600" height="200">
 						<div class="card-block">
 							<h5 class="card-title"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-								Título de la tarjeta
+								SERVICIO DE EMBALAJE
 							</font></font></h5>
 							<p class="card-text"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-								Cras justo odio, dapibus ac facilisis in, egetas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+								Este servicio permite un envío de los paquetes de manera segura y protegida, utilizando materiales de embalaje de alta calidad para asegurar la integridad de tus productos durante el transporte. 
 							</font></font></p>
 							<p>
-								<a class="btn btn-primary" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">acción</font></font></a> <a class="btn" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">acción</font></font></a>
+								<a class="btn btn-primary" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Información</font></font></a> <a class="btn" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"></font></font></a>
 							</p>
 						</div>
 					</div>
@@ -141,16 +141,16 @@
 			<div class="row">
 				<div class="col-md-4">
 					<div class="card">
-						<img class="card-img-top" alt="Miniatura de Bootstrap primero" src="https://www.layoutit.com/img/people-q-c-600-200-1.jpg">
+						<img class="card-img-top" alt="Miniatura de Bootstrap primero" src="images/sobres.jpg" width="600" height="200">
 						<div class="card-block">
 							<h5 class="card-title"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-								Título de la tarjeta
+								MINI PAQUETERÍAS (SOBRES)
 							</font></font></h5>
 							<p class="card-text"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-								Cras justo odio, dapibus ac facilisis in, egetas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+								Ofrecemos un servicio especializado de mini paqueterías utilizando sobres especialmente diseñados para envíos de pequeños artículos. Este servicio es ideal para aquellos envíos de tamaño reducido que requieren una entrega rápida y económica. 
 							</font></font></p>
 							<p>
-								<a class="btn btn-primary" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">acción</font></font></a> <a class="btn" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">acción</font></font></a>
+								<a class="btn btn-primary" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Información</font></font></a> <a class="btn" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"></font></font></a>
 							</p>
 						</div>
 					</div>
@@ -166,7 +166,7 @@
 								Cras justo odio, dapibus ac facilisis in, egetas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
 							</font></font></p>
 							<p>
-								<a class="btn btn-primary" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">acción</font></font></a> <a class="btn" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">acción</font></font></a>
+								<a class="btn btn-primary" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Información</font></font></a> <a class="btn" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"></font></font></a>
 							</p>
 						</div>
 					</div>
@@ -182,7 +182,7 @@
 								Cras justo odio, dapibus ac facilisis in, egetas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
 							</font></font></p>
 							<p>
-								<a class="btn btn-primary" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">acción</font></font></a> <a class="btn" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">acción</font></font></a>
+								<a class="btn btn-primary" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Información</font></font></a> <a class="btn" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"></font></font></a>
 							</p>
 						</div>
 					</div>
