--- a/index.html
+++ b/index.html
@@ -91,14 +91,13 @@
 			<div class="row">
 				<div class="col-md-4">
 					<div class="card">
-						<img class="card-img-top" alt="Miniatura de Bootstrap primero" src="images/trasport.jpg"
-						width="450" height="200">
+						<img class="card-img-top" alt="Miniatura de Bootstrap primero" src="images/cotizacion.avif" width="" height="200">
 						<div class="card-block">
 							<h5 class="card-title"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-								ENCOMIENDAS & SOBRES
+								COTIZACIÓN DE ENVÍOS
 							</font></font></h5>
 							<p class="card-text"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-							 Ofrecemos el traslado de encomiendas, sobres y paquetes a cualquier parte del Perú, con un servicio especializado dirigido a las personas naturales o jurídicas. Contamos con un personal altamente calificado para el manipuleo de su carga y la atención que usted merece.
+								¿Necesitas enviar un paquete? ¡Nosotros te ayudamos! Proporciona los detalles básicos como origen, destino, dimensiones y peso, y te ofreceremos una cotización rápida y precisa.
 							</font></font></p>
 							<p>
 								<a class="btn btn-primary" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Información</font></font></a> <a class="btn" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"></font></font></a>
@@ -108,18 +107,27 @@
 				</div>
 				<div class="col-md-4">
 					<div class="card">
-            <img class="card-img-top" alt="Miniatura de Bootstrap segunda"  >
-						  <div class="card-block">
-                <h5 class="card-title"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
+            			<img class="card-img-top" alt="Miniatura de Bootstrap primero" src="images/trasport.jpg"  width="" height="200">
+						<div class="card-block">
+							<h5 class="card-title"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
+								CARGA COMPLETA
+							</font></font></h5>
+							<p class="card-text"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
+							Ofrecemos el servicio exclusivo de mudanza y transporte de carga completa, garantizando la seguridad y puntualidad en la entrega de tus bienes. 
+							</font></font></p>
+							<p>
+								<a class="btn btn-primary" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Información</font></font></a> <a class="btn" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"></font></font></a>
+							</p>
+              			</div>
+					</div>
+				</div>
 
-                </font></font></h5>
-                <p class="card-text"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-                  Ofrecemos el servicio exclusivo de mudanza y transporte de carga completa, garantizando la seguridad y puntualidad en la entrega de tus bienes. 
-                </font></font></p>
-                <p>
-                  <a class="btn btn-primary" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Información</font></font></a> <a class="btn" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"></font></font></a>
-                </p>
-              </div>
+				<div class="col-md-4">
+					<div class="card">
+            			<img class="card-img-top" alt="Miniatura de Bootstrap tercera" src="images/emba.jpg"  width="" height="200">
+						<div class="card-block">
+							<h5 class="card-title"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
+								SERVICIO DE EMBALAJE
 							</font></font></h5>
 							<p class="card-text"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
 								Ofrecemos el servicio exclusivo de mudanza y transporte de carga completa, garantizando la seguridad y puntualidad en la entrega de tus bienes. 
@@ -130,27 +138,13 @@
 						</div>
 					</div>
 				</div>
+				
+			
+			
+			
 				<div class="col-md-4">
 					<div class="card">
-						<img class="card-img-top" alt="Miniatura de Bootstrap tercera" src="images/emba.jpg" width="600" height="200">
-						<div class="card-block">
-							<h5 class="card-title"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-								SERVICIO DE EMBALAJE
-							</font></font></h5>
-							<p class="card-text"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-								Este servicio permite un envío de los paquetes de manera segura y protegida, utilizando materiales de embalaje de alta calidad para asegurar la integridad de tus productos durante el transporte. 
-							</font></font></p>
-							<p>
-								<a class="btn btn-primary" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Información</font></font></a> <a class="btn" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"></font></font></a>
-							</p>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-4">
-					<div class="card">
-						<img class="card-img-top" alt="Miniatura de Bootstrap primero" src="images/sobres.jpg" width="600" height="200">
+						<img class="card-img-top" alt="Miniatura de Bootstrap primero" src="images/sobres.jpg"  width="" height="200">
 						<div class="card-block">
 							<h5 class="card-title"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
 								MINI PAQUETERÍAS (SOBRES)
@@ -164,6 +158,7 @@
 						</div>
 					</div>
 				</div>
+
 				<div class="col-md-4">
 					<div class="card">
 						<img class="card-img-top" alt="Miniatura de Bootstrap segunda" src="https://www.layoutit.com/img/city-q-c-600-200-1.jpg">
