--- a/index.html
+++ b/index.html
@@ -38,31 +38,35 @@
 					</div>
 				</li>
 			</ul>
-			<h3><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-				h3. Lorem ipsum dolor sit amet.
-			</font></font></h3>
+			<h3 style="font-family:century gothic; text-align:center;">
+				<span style="vertical-align: inherit; font-size: 50px; color: blue;">
+					<strong>EMPRESA DE TRANSPORTE TROME EXPRESS CARGO</strong>
+				</span>
+				<hr>
+			</h3>	
 			<div class="row">
 				<div class="col-md-6">
-					<h2><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-						título
-					</font></font></h2>
-					<p><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-						Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-					</font></font></p>
-					<p>
-						<a class="btn" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Ver detalles "</font></font></a>
-					</p>
+					<h2 style="font-family: times new roman; text-align: center;">
+						<span style="vertical-align: inherit; font-size: 24px; font-weight: bold;">
+							CONOCENOS COMO EMPRESA
+						</span>
+					</h2>		
+					<p style="font-family: times new roman; text-align: justify;">
+						<span style="vertical-align: inherit;">
+							Trome Express Cargo es una Empresa Individual de Responsabilidad Limitada con el RUC 20527866732, con sede en Wanchaq, Cusco, Perú. Fundada el 1 de mayo de 2007, se dedica al transporte de carga por carretera, con 5 empleados y operaciones de facturación y contabilidad manuales. Su dirección legal está en Av. República de Argentina, Mza. H Lote. 17b, y está registrada como empresa activa. Destaca por estar empadronada en el Registro Nacional de Proveedores, lo que le permite contratar con el Estado Peruano, consolidando así su posición en el mercado regional.
+						</span>
+					</p>	
 				</div>
 				<div class="col-md-6">
 					<img alt="Vista previa de imagen de arranque" src="images/transporte.jpg"
-					width="200">
+					width="700" height="200">
 				</div>
 			</div>
 		</div>
 	</div>
 	<div class="row">
 		<div class="col-md-6">
-			 <span class="badge badge-default"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">etiqueta</font></font></span>
+			 <span class="badge badge-default"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"></font></font></span>
 			<dl>
 				<dt><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
 					Visión
@@ -76,7 +80,7 @@
 			</dl>
 		</div>
 		<div class="col-md-6">
-			 <span class="badge badge-default"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">etiqueta</font></font></span>
+			 <span class="badge badge-default"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"></font></font></span>
 			<dl>
 				<dt><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
 					Misión
@@ -161,35 +165,34 @@
 
 				<div class="col-md-4">
 					<div class="card">
-						<img class="card-img-top" alt="Miniatura de Bootstrap segunda" src="https://www.layoutit.com/img/city-q-c-600-200-1.jpg">
+						<img class="card-img-top" alt="Miniatura de Bootstrap segunda" src="images/encomiendas.jpg" width="" height="200">
 						<div class="card-block">
 							<h5 class="card-title"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-								Título de la tarjeta
+								ENCOMIENDAS
 							</font></font></h5>
 							<p class="card-text"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-								Cras justo odio, dapibus ac facilisis in, egetas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+								Trome Express Cargo brinda servicios de encomiendas por carretera desde 2007 en Wanchaq, Cusco, Perú. Con un equipo de 5 trabajadores, aseguran entregas seguras y puntuales.
 							</font></font></p>
 							<p>
-								<a class="btn btn-primary" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Información</font></font></a> <a class="btn" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"></font></font></a>
+								<a class="btn btn-primary" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">ver mas</font></font></a> <a class="btn" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">ver menos</font></font></a>
 							</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="card">
-						<img class="card-img-top" alt="Miniatura de Bootstrap tercera" src="https://www.layoutit.com/img/sports-q-c-600-200-1.jpg">
+						<img class="card-img-top" alt="Miniatura de Bootstrap tercera" src="images/recomendaciones.jpg" width="" height="200">
 						<div class="card-block">
 							<h5 class="card-title"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-								Título de la tarjeta
+								RECOMENDACIONES
 							</font></font></h5>
 							<p class="card-text"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-								Cras justo odio, dapibus ac facilisis in, egetas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+								Su encomienda, sobre o paquete debe estar correctamente embalado según su contenido. Su envío debe estar correctamente rotulado, con los datos correctos y completos del remitente y consignado. La entrega de su envió es personal o con carta poder, con el DNI del consignado. Realizar el envío de acuerdo al cronograma de salidas de la agencia elegida.
 							</font></font></p>
 							<p>
-								<a class="btn btn-primary" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Información</font></font></a> <a class="btn" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"></font></font></a>
+								<a class="btn btn-primary" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">ver mas</font></font></a> <a class="btn" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">ver menos</font></font></a>
 							</p>
-						</div>
-					</div>
+						</div>			</div>
 				</div>
 			</div>
 		</div>
