--- a/libro.html
+++ b/libro.html
@@ -52,22 +52,25 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav  ">
               <li class="nav-item active">
-                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html"> About </a>
+                <a class="nav-link" href="nosotros.html"> Nosotros </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="service.html"> Service</a>
+                <a class="nav-link" href="flota.html"> flota</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="shop.html"> Shop </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="company.html"> Company </a>
+                <a class="nav-link" href="atencion.html"> Atencion </a>
               </li>
               <li class="nav-item ">
-                <a class="nav-link " href="contact.html">Contact us</a>
+                <a class="nav-link " href="contactos.html">Contactos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="libro.html"> Libro de Reclamaciones</a>
+              </li>
+              <li class="nav-item ">
+                <a class="nav-link " href="ubicacion.html">Ubicacion</a>
               </li>
             </ul>
           </div>
@@ -136,22 +139,25 @@
                   <div class="d-flex mx-auto flex-column flex-lg-row align-items-center">
                     <ul class="navbar-nav  ">
                       <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="about.html"> About </a>
+                        <a class="nav-link" href="nosotros.html"> Nosotros </a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="service.html"> Service</a>
+                        <a class="nav-link" href="flota.html"> flota</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="shop.html"> Shop </a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="company.html"> Company </a>
+                        <a class="nav-link" href="atencion.html"> Atencion </a>
                       </li>
                       <li class="nav-item ">
-                        <a class="nav-link pr-0" href="contact.html">Contact us</a>
+                        <a class="nav-link " href="contactos.html">Contactos</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="libro.html"> Libro de Reclamaciones</a>
+                      </li>
+                      <li class="nav-item ">
+                        <a class="nav-link " href="ubicacion.html">Ubicacion</a>
                       </li>
                     </ul>
 
@@ -171,48 +177,39 @@
 
 
 
-
-  <!-- contact section -->
-  <section class="contact_section layout_padding">
-    <div class="d-flex justify-content-center">
-      <h2 class="heading_style">
-        Contact us
-      </h2>
-    </div>
-    <div class="container layout_padding2-top">
+  <!-- shop section -->
+  <section class="shop_section layout_padding">
+    <div class="container">
+      <div class="d-flex justify-content-center">
+        <h2 class="heading_style">
+          Our Shop
+        </h2>
+      </div>
       <div class="row">
         <div class="col-md-6">
-          <div id="map" class="w-100 h-100"></div>
+          <div class="d-flex align-items-center h-100">
+            <div class="shop-detail">
+              <h5>
+                Everything You Need
+              </h5>
+              <p>
+                ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+              </p>
+            </div>
+          </div>
         </div>
-
         <div class="col-md-6">
-          <div class="contact_form-container">
-            <form action="">
-              <div>
-                <input type="text" placeholder="Your Name">
-              </div>
-              <div>
-                <input type="email" placeholder="Your Email">
-              </div>
-              <div>
-                <input type="text" placeholder="Your Phone">
-              </div>
-
-              <div>
-                <input type="text" class="message_input" placeholder="Message">
-              </div>
-              <div class="d-flex justify-content-end">
-                <button type="submit " class="">
-                  Send
-                </button>
-              </div>
-            </form>
+          <div class="shop_img-box">
+            <img src="images/gift.jpg" alt="" class="img-fluid">
           </div>
         </div>
       </div>
     </div>
   </section>
-  <!-- end contact section -->
+  <!-- end shop section -->
+
+
 
 
 
@@ -282,22 +279,29 @@
                   Links
                 </h5>
                 <li>
-                  <a href="index.html"> Home</a>
+                  <a href="index.html"> Inicio</a>
                 </li>
                 <li>
-                  <a href="about.html">About</a>
+                  <a href="nosotros.html">nosotros</a>
                 </li>
                 <li>
-                  <a href="service.html"> Service</a>
+                  <a href="servicios.html"> servicios</a>
                 </li>
                 <li>
-                  <a href="shop.html"> Shop</a>
+                  <a href="flota.html"> flota</a>
                 </li>
                 <li>
-                  <a href="company.html"> Company</a>
+                  <a href="atencion.html"> Atención</a>
                 </li>
                 <li>
-                  <a href="contact.html">Contact us</a>
+                  <a href="contactos.html">contactos</a>
+                </li>
+                <li>
+                  <a href="libro.html">Libro de reclamaciones</a>
+
+                </li>
+                <li>
+                  <a href="ubicacion.html">Ubicación</a>
                 </li>
 
               </ul>
@@ -342,33 +346,6 @@
   <script type="text/javascript" src="js/bootstrap.js"></script>
 
 
-  <script>
-    // This example adds a marker to indicate the position of Bondi Beach in Sydney,
-    // Australia.
-    function initMap() {
-      var map = new google.maps.Map(document.getElementById('map'), {
-        zoom: 11,
-        center: {
-          lat: 40.645037,
-          lng: -73.880224
-        },
-      });
-
-      var image = 'images/maps-and-flags.png';
-      var beachMarker = new google.maps.Marker({
-        position: {
-          lat: 40.645037,
-          lng: -73.880224
-        },
-        map: map,
-        icon: image
-      });
-    }
-  </script>
-  <!-- google map js -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8eaHt9Dh5H57Zh0xVTqxVdBFCvFMqFjQ&callback=initMap">
-  </script>
-  <!-- end google map js -->
 
 </body>
 
