--- a/nosotros.html
+++ b/nosotros.html
@@ -52,22 +52,25 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav  ">
               <li class="nav-item active">
-                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html"> About </a>
+                <a class="nav-link" href="nosotros.html"> Nosotros </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="service.html"> Service</a>
+                <a class="nav-link" href="flota.html"> flota</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="shop.html"> Shop </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="company.html"> Company </a>
+                <a class="nav-link" href="atencion.html"> Atencion </a>
               </li>
               <li class="nav-item ">
-                <a class="nav-link " href="contact.html">Contact us</a>
+                <a class="nav-link " href="contactos.html">Contactos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="libro.html"> Libro de Reclamaciones</a>
+              </li>
+              <li class="nav-item ">
+                <a class="nav-link " href="ubicacion.html">Ubicacion</a>
               </li>
             </ul>
           </div>
@@ -136,22 +139,25 @@
                   <div class="d-flex mx-auto flex-column flex-lg-row align-items-center">
                     <ul class="navbar-nav  ">
                       <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="about.html"> About </a>
+                        <a class="nav-link" href="nosotros.html"> Nosotros </a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="service.html"> Service</a>
+                        <a class="nav-link" href="flota.html"> flota</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="shop.html"> Shop </a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="company.html"> Company </a>
+                        <a class="nav-link" href="atencion.html"> Atencion </a>
                       </li>
                       <li class="nav-item ">
-                        <a class="nav-link pr-0" href="contact.html">Contact us</a>
+                        <a class="nav-link " href="contactos.html">Contactos</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="libro.html"> Libro de Reclamaciones</a>
+                      </li>
+                      <li class="nav-item ">
+                        <a class="nav-link " href="ubicacion.html">Ubicacion</a>
                       </li>
                     </ul>
 
@@ -166,42 +172,60 @@
     </section>
     <!-- end header section -->
 
+
   </div>
 
-
-
-
-  <!-- shop section -->
-  <section class="shop_section layout_padding">
+  <!-- about section -->
+  <section class="about_section layout_padding2-bottom">
     <div class="container">
-      <div class="d-flex justify-content-center">
-        <h2 class="heading_style">
-          Our Shop
-        </h2>
+      <div class="row">
+        <div class="col">
+          <h2 class="heading_style">
+            About Us
+          </h2>
+          <p>
+            adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco
+          </p>
+        </div>
+
       </div>
       <div class="row">
         <div class="col-md-6">
-          <div class="d-flex align-items-center h-100">
-            <div class="shop-detail">
-              <h5>
-                Everything You Need
-              </h5>
-              <p>
-                ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-              </p>
-            </div>
+          <div class="about_img-box">
+
+            <img src="images/a-truck.jpg" alt="" class="img-fluid">
           </div>
         </div>
-        <div class="col-md-6">
-          <div class="shop_img-box">
-            <img src="images/gift.jpg" alt="" class="img-fluid">
+        <div class="col-md-6 about_detail-container">
+          <div class="about_detail-box">
+            <h3>
+              Company and Transport
+            </h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+              ea commodo consequat. Duis aute irure dolor in reprehenderit in Lorem ipsum dolor sit amet, consectetur
+              adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna as
+            </p>
+            <div class="d-flex  justify-content-end">
+              <a href="" class="quote-btn about-btn">
+                <img src="images/white-next.png" alt="">
+                <span>
+                  About More
+                </span>
+
+              </a>
+            </div>
           </div>
         </div>
       </div>
     </div>
+
   </section>
-  <!-- end shop section -->
+
+  <!-- end about section -->
+
 
 
 
@@ -273,22 +297,29 @@
                   Links
                 </h5>
                 <li>
-                  <a href="index.html"> Home</a>
+                  <a href="index.html"> Inicio</a>
                 </li>
                 <li>
-                  <a href="about.html">About</a>
+                  <a href="nosotros.html">nosotros</a>
                 </li>
                 <li>
-                  <a href="service.html"> Service</a>
+                  <a href="servicios.html"> servicios</a>
                 </li>
                 <li>
-                  <a href="shop.html"> Shop</a>
+                  <a href="flota.html"> flota</a>
                 </li>
                 <li>
-                  <a href="company.html"> Company</a>
+                  <a href="atencion.html"> Atención</a>
                 </li>
                 <li>
-                  <a href="contact.html">Contact us</a>
+                  <a href="contactos.html">contactos</a>
+                </li>
+                <li>
+                  <a href="libro.html">Libro de reclamaciones</a>
+
+                </li>
+                <li>
+                  <a href="ubicacion.html">Ubicación</a>
                 </li>
 
               </ul>
@@ -331,6 +362,7 @@
 
   <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.js"></script>
+
 
 
 
