--- a/servicios.html
+++ b/servicios.html
@@ -52,22 +52,25 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav  ">
               <li class="nav-item active">
-                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html"> About </a>
+                <a class="nav-link" href="nosotros.html"> Nosotros </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="service.html"> Service</a>
+                <a class="nav-link" href="flota.html"> flota</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="shop.html"> Shop </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="company.html"> Company </a>
+                <a class="nav-link" href="atencion.html"> Atencion </a>
               </li>
               <li class="nav-item ">
-                <a class="nav-link " href="contact.html">Contact us</a>
+                <a class="nav-link " href="contactos.html">Contactos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="libro.html"> Libro de Reclamaciones</a>
+              </li>
+              <li class="nav-item ">
+                <a class="nav-link " href="ubicacion.html">Ubicacion</a>
               </li>
             </ul>
           </div>
@@ -136,22 +139,25 @@
                   <div class="d-flex mx-auto flex-column flex-lg-row align-items-center">
                     <ul class="navbar-nav  ">
                       <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="about.html"> About </a>
+                        <a class="nav-link" href="nosotros.html"> Nosotros </a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="service.html"> Service</a>
+                        <a class="nav-link" href="flota.html"> flota</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="shop.html"> Shop </a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="company.html"> Company </a>
+                        <a class="nav-link" href="atencion.html"> Atencion </a>
                       </li>
                       <li class="nav-item ">
-                        <a class="nav-link pr-0" href="contact.html">Contact us</a>
+                        <a class="nav-link " href="contactos.html">Contactos</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="libro.html"> Libro de Reclamaciones</a>
+                      </li>
+                      <li class="nav-item ">
+                        <a class="nav-link " href="ubicacion.html">Ubicacion</a>
                       </li>
                     </ul>
 
@@ -322,22 +328,29 @@
                   Links
                 </h5>
                 <li>
-                  <a href="index.html"> Home</a>
+                  <a href="index.html"> Inicio</a>
                 </li>
                 <li>
-                  <a href="about.html">About</a>
+                  <a href="nosotros.html">nosotros</a>
                 </li>
                 <li>
-                  <a href="service.html"> Service</a>
+                  <a href="servicios.html"> servicios</a>
                 </li>
                 <li>
-                  <a href="shop.html"> Shop</a>
+                  <a href="flota.html"> flota</a>
                 </li>
                 <li>
-                  <a href="company.html"> Company</a>
+                  <a href="atencion.html"> Atención</a>
                 </li>
                 <li>
-                  <a href="contact.html">Contact us</a>
+                  <a href="contactos.html">contactos</a>
+                </li>
+                <li>
+                  <a href="libro.html">Libro de reclamaciones</a>
+
+                </li>
+                <li>
+                  <a href="ubicacion.html">Ubicación</a>
                 </li>
 
               </ul>
