--- a/nosotros.html
+++ b/nosotros.html
@@ -31,12 +31,16 @@
 </head>
 
 <body>
+  <div class="hero_area custom_page-height">
+    <!-- header section strats -->
+    <section class="header_section">
       <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container d-lg-none">
           <a class="navbar-brand" href="#">
             <div class="logo-box">
+              <img src="images/logo.png" alt="">
               <span>
-                Transportes Express
+                Transportz
               </span>
             </div>
           </a>
@@ -52,6 +56,9 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="nosotros.html"> Nosotros </a>
+              </li>
+              <li class="nav-item">
+              <a class="nav-link" href="servicios.html"> servicios </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="flota.html"> flota</a>
@@ -73,11 +80,55 @@
         </nav>
         <div class="header_container ">
           <div class="logo-box">
+            <img src="images/logo.png" alt="">
             <span>
-              Transporte Express
+              Transportz
             </span>
           </div>
           <div>
+            <div class="header_top">
+              <div class="header_top-contact">
+
+                <a href="" class="ml-4">
+                  <div>
+                    <img src="images/phone.png" alt="" />
+                  </div>
+                  <span>
+                    (+71) 258964785
+                  </span>
+                </a>
+                <a href="" class="ml-4">
+                  <div>
+                    <img src="images/mail.png" alt="" />
+                  </div>
+                  <span>
+                    transportz@gmail.com
+                  </span>
+                </a>
+              </div>
+              <div class="header_top-social">
+                <div>
+                  <a href="">
+                    <img src="images/fb.png" alt="">
+                  </a>
+                </div>
+                <div>
+                  <a href="">
+                    <img src="images/twitter.png" alt="">
+                  </a>
+                </div>
+                <div>
+                  <a href="">
+                    <img src="images/g-plus.png" alt="">
+                  </a>
+                </div>
+                <div>
+                  <a href="">
+                    <img src="images/linkedin.png" alt="">
+                  </a>
+                </div>
+              </div>
+            </div>
             <div class="header_btm">
               <nav class="navbar navbar-expand-lg custom_nav-container pt-3">
 
@@ -95,6 +146,9 @@
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="nosotros.html"> Nosotros </a>
+                      </li>
+                      <li class="nav-item">
+                      <a class="nav-link" href="servicios.html"> servicios </a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="flota.html"> flota</a>
@@ -133,8 +187,12 @@
       <div class="row">
         <div class="col">
           <h2 class="heading_style">
-            Nosotros 
+            About Us
           </h2>
+          <p>
+            adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco
+          </p>
         </div>
 
       </div>
@@ -148,41 +206,170 @@
         <div class="col-md-6 about_detail-container">
           <div class="about_detail-box">
             <h3>
-              Trome Express Cargo
+              Company and Transport
             </h3>
             <p>
-              Es una Empresa Individual de Responsabilidad Limitada con el RUC 20527866732, con sede en Wanchaq, Cusco, Perú. Fundada el 1 de mayo de 2007, se dedica al transporte de carga por carretera, con 5 empleados y operaciones de facturación y contabilidad manuales. Su dirección legal está en Av. República de Argentina, Mza. H Lote. 17b, y está registrada como empresa activa. Destaca por estar empadronada en el Registro Nacional de Proveedores, lo que le permite contratar con el Estado Peruano, consolidando así su posición en el mercado regional.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+              ea commodo consequat. Duis aute irure dolor in reprehenderit in Lorem ipsum dolor sit amet, consectetur
+              adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna as
             </p>
             <div class="d-flex  justify-content-end">
               <a href="" class="quote-btn about-btn">
                 <img src="images/white-next.png" alt="">
                 <span>
-                 Información
+                  About More
                 </span>
 
               </a>
             </div>
           </div>
         </div>
-
-        <h3>
-              Misión
-            </h3>
-            <p>
-              Nuestra misión en Trome Express Cargo es proporcionar servicios de transporte de carga por carretera de manera segura, eficiente y confiable para satisfacer las necesidades de nuestros clientes en la región de Cusco, Perú. Nos comprometemos a ofrecer un servicio personalizado y de alta calidad, respaldado por la integridad y el profesionalismo de nuestro equipo. Buscamos ser un socio confiable para nuestros clientes, proporcionando soluciones logísticas que impulsen su éxito y contribuyan al desarrollo económico de la región.
-            </p>
-            <h3>
-              Visión
-            </h3>
-            <p>
-             En Trome Express Cargo nos esforzamos por ser reconocidos como líderes en el transporte de carga por carretera en la región de Cusco y sus alrededores. Buscamos expandir nuestra presencia y consolidar nuestra reputación como una empresa confiable y eficiente en el mercado regional. Nos orientamos hacia la innovación continua, la adopción de tecnologías avanzadas y prácticas sostenibles para mejorar nuestros servicios y contribuir al crecimiento sostenible de nuestra empresa y de la comunidad en general. Aspiramos a ser referentes en nuestro sector, manteniendo siempre nuestro compromiso con la excelencia operativa, la seguridad y la satisfacción del cliente.
-            </p>
       </div>
     </div>
 
   </section>
 
   <!-- end about section -->
+
+
+
+
+
+
+  <!-- info section -->
+  <section class="info_section ">
+    <div class="container ">
+      <div class="row  mb-3 pb-4">
+        <div class="col-md-3 info_logo">
+          <div class="logo-box">
+            <img src="images/logo-white.png" alt="">
+            <span>
+              Transportz
+            </span>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedconsectetur
+          </p>
+          <div class="info_social">
+            <div>
+              <a href="">
+                <img src="images/fb.png" alt="">
+              </a>
+            </div>
+            <div>
+              <a href="">
+                <img src="images/twitter.png" alt="">
+              </a>
+            </div>
+            <div>
+              <a href="">
+                <img src="images/g-plus.png" alt="">
+              </a>
+            </div>
+            <div>
+              <a href="">
+                <img src="images/linkedin.png" alt="">
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 info_address">
+          <h5>
+            Address
+          </h5>
+          <p>
+            Healing Center, 176 W Street name,
+            New York, NY 10014, US
+          </p>
+          <p>
+            (+71) 8522369417
+          </p>
+          <p>
+            (+71) 8522369417
+          </p>
+          <p>
+            <a href="">
+              transportz@gmail.com
+            </a>
+          </p>
+        </div>
+        <div class="col-md-3 info_links">
+
+          <div class="info_nav ">
+            <nav class="">
+              <ul>
+                <h5>
+                  Links
+                </h5>
+                <li>
+                  <a href="index.html"> Inicio</a>
+                </li>
+                <li>
+                  <a href="nosotros.html">nosotros</a>
+                </li>
+                <li>
+                  <a href="servicios.html"> servicios</a>
+                </li>
+                <li>
+                  <a href="flota.html"> flota</a>
+                </li>
+                <li>
+                  <a href="atencion.html"> Atención</a>
+                </li>
+                <li>
+                  <a href="contactos.html">contactos</a>
+                </li>
+                <li>
+                  <a href="libro.html">Libro de reclamaciones</a>
+
+                </li>
+                <li>
+                  <a href="ubicacion.html">Ubicación</a>
+                </li>
+
+              </ul>
+            </nav>
+          </div>
+        </div>
+        <div class="col-md-3 info_news">
+          <h5>
+            Newsletter
+          </h5>
+          <form action="">
+            <div>
+              <input type="text" placeholder="Your Name">
+            </div>
+            <div>
+              <input type="email" placeholder="Email">
+            </div>
+            <div class="d-flex justify-content-end">
+              <button type="submit">
+                Subscribe
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
+
+
+    </div>
+  </section>
+  <!-- end info section -->
+
+  <!-- footer section -->
+  <section class="container-fluid footer_section">
+    <p>
+      Copyright &copy; 2019 All Rights Reserved By
+      <a href="https://html.design/">Free Html Templates</a>
+    </p>
+  </section>
+  <!-- footer section -->
+
+  <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
+  <script type="text/javascript" src="js/bootstrap.js"></script>
+
+
 
 
 </body>
