--- a/atencion.html
+++ b/atencion.html
@@ -31,12 +31,16 @@
 </head>
 
 <body>
+  <div class="hero_area custom_page-height">
+    <!-- header section strats -->
+    <section class="header_section">
       <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container d-lg-none">
           <a class="navbar-brand" href="#">
             <div class="logo-box">
+              <img src="images/logo.png" alt="">
               <span>
-                Transporte Express
+                Transportz
               </span>
             </div>
           </a>
@@ -52,6 +56,9 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="nosotros.html"> Nosotros </a>
+              </li>
+              <li class="nav-item">
+              <a class="nav-link" href="servicios.html"> servicios </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="flota.html"> flota</a>
@@ -73,12 +80,55 @@
         </nav>
         <div class="header_container ">
           <div class="logo-box">
+            <img src="images/logo.png" alt="">
             <span>
-              Transporte Express
+              Transportz
             </span>
           </div>
           <div>
-           
+            <div class="header_top">
+              <div class="header_top-contact">
+
+                <a href="" class="ml-4">
+                  <div>
+                    <img src="images/phone.png" alt="" />
+                  </div>
+                  <span>
+                    (+71) 258964785
+                  </span>
+                </a>
+                <a href="" class="ml-4">
+                  <div>
+                    <img src="images/mail.png" alt="" />
+                  </div>
+                  <span>
+                    transportz@gmail.com
+                  </span>
+                </a>
+              </div>
+              <div class="header_top-social">
+                <div>
+                  <a href="">
+                    <img src="images/fb.png" alt="">
+                  </a>
+                </div>
+                <div>
+                  <a href="">
+                    <img src="images/twitter.png" alt="">
+                  </a>
+                </div>
+                <div>
+                  <a href="">
+                    <img src="images/g-plus.png" alt="">
+                  </a>
+                </div>
+                <div>
+                  <a href="">
+                    <img src="images/linkedin.png" alt="">
+                  </a>
+                </div>
+              </div>
+            </div>
             <div class="header_btm">
               <nav class="navbar navbar-expand-lg custom_nav-container pt-3">
 
@@ -96,6 +146,9 @@
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="nosotros.html"> Nosotros </a>
+                      </li>
+                      <li class="nav-item">
+                      <a class="nav-link" href="servicios.html"> servicios </a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="flota.html"> flota</a>
@@ -128,6 +181,10 @@
 
   </div>
 
+
+
+
+
   <!-- company section -->
   <div class=" layout_padding">
     <section class="company_section layout_padding2">
@@ -137,10 +194,14 @@
             <div class="d-flex align-items-center h-100">
               <div class="company-detail">
                 <h3>
-                  Atencion Al cliente 
+                  Company
                 </h3>
                 <p>
-                  Ud. podrá consultarnos desde la comodidad de su casa u oficina, ofreciéndole información necesaria para el envío de su carga. Envíenos sus comentarios o consultas que lo estaremos atendiendo a la brevedad posible.
+                  Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
+                  classical
+                  Latin literature from 45 BC, making it over 2000 yearsContrary to popular belief, Lorem Ipsum is not
+                  simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over
+                  2000 years
                 </p>
               </div>
             </div>
@@ -155,51 +216,147 @@
     </section>
   </div>
 
-  <!-- contact section -->
-  <section class="contact_section layout_padding">
-    <div class="d-flex justify-content-center">
-      <h2 class="heading_style">
-        Contactanos
-      </h2>
-    </div>
-    <div class="container layout_padding2-top">
-      <div class="row">
-        <div class="col-md-6">
-          <div id="map" class="w-100 h-100"></div>
-        </div>
+  <!-- end company section -->
 
-        <div class="col-md-6">
-          <div class="contact_form-container">
-            <form action="">
-              <div>
-                <input type="text" placeholder="Nombre">
-              </div>
-              <div>
-                <input type="email" placeholder=" Email">
-              </div>
-              <div>
-                <input type="text" placeholder="Telefono">
-              </div>
 
-              <div>
-                <input type="text" class="Mensaje.." placeholder="Mensaje...">
-              </div>
-              <div class="d-flex justify-content-end">
-                <button type="submit " class="">
-                  Enviar
-                </button>
-              </div>
-            </form>
+
+
+
+
+  <!-- info section -->
+  <section class="info_section ">
+    <div class="container ">
+      <div class="row  mb-3 pb-4">
+        <div class="col-md-3 info_logo">
+          <div class="logo-box">
+            <img src="images/logo-white.png" alt="">
+            <span>
+              Transportz
+            </span>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedconsectetur
+          </p>
+          <div class="info_social">
+            <div>
+              <a href="">
+                <img src="images/fb.png" alt="">
+              </a>
+            </div>
+            <div>
+              <a href="">
+                <img src="images/twitter.png" alt="">
+              </a>
+            </div>
+            <div>
+              <a href="">
+                <img src="images/g-plus.png" alt="">
+              </a>
+            </div>
+            <div>
+              <a href="">
+                <img src="images/linkedin.png" alt="">
+              </a>
+            </div>
           </div>
         </div>
+        <div class="col-md-3 info_address">
+          <h5>
+            Address
+          </h5>
+          <p>
+            Healing Center, 176 W Street name,
+            New York, NY 10014, US
+          </p>
+          <p>
+            (+71) 8522369417
+          </p>
+          <p>
+            (+71) 8522369417
+          </p>
+          <p>
+            <a href="">
+              transportz@gmail.com
+            </a>
+          </p>
+        </div>
+        <div class="col-md-3 info_links">
+
+          <div class="info_nav ">
+            <nav class="">
+              <ul>
+                <h5>
+                  Links
+                </h5>
+                <li>
+                  <a href="index.html"> Inicio</a>
+                </li>
+                <li>
+                  <a href="nosotros.html">nosotros</a>
+                </li>
+                <li>
+                  <a href="servicios.html"> servicios</a>
+                </li>
+                <li>
+                  <a href="flota.html"> flota</a>
+                </li>
+                <li>
+                  <a href="atencion.html"> Atención</a>
+                </li>
+                <li>
+                  <a href="contactos.html">contactos</a>
+                </li>
+                <li>
+                  <a href="libro.html">Libro de reclamaciones</a>
+
+                </li>
+                <li>
+                  <a href="ubicacion.html">Ubicación</a>
+                </li>
+
+              </ul>
+            </nav>
+          </div>
+        </div>
+        <div class="col-md-3 info_news">
+          <h5>
+            Newsletter
+          </h5>
+          <form action="">
+            <div>
+              <input type="text" placeholder="Your Name">
+            </div>
+            <div>
+              <input type="email" placeholder="Email">
+            </div>
+            <div class="d-flex justify-content-end">
+              <button type="submit">
+                Subscribe
+              </button>
+            </div>
+          </form>
+        </div>
       </div>
+
+
     </div>
   </section>
-  <!-- end contact section -->
+  <!-- end info section -->
+
+  <!-- footer section -->
+  <section class="container-fluid footer_section">
+    <p>
+      Copyright &copy; 2019 All Rights Reserved By
+      <a href="https://html.design/">Free Html Templates</a>
+    </p>
+  </section>
+  <!-- footer section -->
+
+  <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
+  <script type="text/javascript" src="js/bootstrap.js"></script>
 
 
 
- 
 
 </body>
 
