--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
                 <a class="nav-link" href="nosotros.html"> Nosotros </a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="servicios.html"> servicios </a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="flota.html"> flota</a>
               </li>
               <li class="nav-item">
@@ -143,6 +146,9 @@
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="nosotros.html"> Nosotros </a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="servicios.html"> servicios </a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="flota.html"> flota</a>
